[project]
name = "unitask-neuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "gradio>=5.49.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "openai>=2.3.0",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
]
